Closed Bug 1316599 Opened 9 years ago Closed 9 years ago

Intermittent Assertion failure: !aAllocator || aAllocator->GetLayersIPCActor()->IPCOpen(), at c:/builds/moz2_slave/autoland-w32-d-000000000000000/build/src/gfx/layers/client/TextureClient.cpp:1214

Categories

(Core :: Graphics: Layers, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla53
Tracking Status
firefox51 --- unaffected
firefox52 --- fixed
firefox53 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: dvander)

References

(Blocks 1 open bug)

Details

(Keywords: intermittent-failure, Whiteboard: [gfx-noted])

Attachments

(1 file)

Even though this instance is unrelated to the GPU process, it is definitely something that could happen with it, so taking this. The assert is just bogus.
Assignee: nobody → dvander
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: [gfx-noted]
Attached patch fixSplinter Review
Just remove these asserts.
Attachment #8809926 - Flags: review?(matt.woodrow)
Attachment #8809926 - Flags: review?(matt.woodrow) → review+
Pushed by danderson@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/4da186740a81 Remove assertions in TextureClient that IPC is open. (bug 1316599, r=mattwoodrow)
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla53
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: