Remove assertions in TextureClient that IPC is open. (bug 1316599, r=mattwoodrow)